k8/coordinator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: coordinator
  name: coordinator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: coordinator
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: coordinator
    spec:
      containers:
        - env:
            - name: IMAGES_URL
              value: http://image-files:8080/api/v1/images
            - name: METADATA_URL
              value: http://image-metadata:8080/api/v1/metadata
            - name: ORGANISATIONS_URL
              value: http://organisations:8082/v1/organisations
            - name: PERMISSIONS_URL
              value: http://permission-check:8080/api/v1/permissions
            - name: USERS_URL
              value: http://users:8081/v1
          image: coordinator
          name: coordinator
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
