k8/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: db
  name: db
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: db
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: db
    spec:
      containers:
        - env:
            - name: MARIADB_DATABASE
              value: justphotons
            - name: MARIADB_ROOT_PASSWORD
              value: "1234567890"
          image: mariadb
          name: db
      restartPolicy: Always
