k8/image-metadata-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: image-metadata
  name: image-metadata
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: image-metadata
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: image-metadata
    spec:
      containers:
        - env:
            - name: DB_ADDRESS
              value: db
            - name: DB_NAME
              value: justphotons
            - name: DB_PASSWORD
              value: "1234567890"
            - name: DB_PORT
              value: "3306"
            - name: DB_USER
              value: root
          image: banana4242/image-metadata:latest
          name: image-metadata
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              protocol: TCP
      restartPolicy: Always
