k8/users-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: users
  name: users
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: users
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: users
    spec:
      containers:
        - env:
            - name: DATABASE_URL
              value: mariadb://db:3306/justphotons
          image: users
          name: users
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8081
              protocol: TCP
      restartPolicy: Always
