k8/image-files-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: image-files
  name: image-files
spec:
  ports:
    - name: "8083"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: image-files
