k8/image-metadata-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: image-metadata
  name: image-metadata
spec:
  ports:
    - name: "8084"
      port: 8080
      targetPort: 8080
  selector:
    io.kompose.service: image-metadata
