k8/organisations-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: organisations
  name: organisations
spec:
  ports:
    - name: "8082"
      port: 8080
      targetPort: 8082
  selector:
    io.kompose.service: organisations
