k8/permission-check-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: permission-check
  name: permission-check
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8080
  selector:
    io.kompose.service: permission-check
