k8/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules: 
  - http: 
      paths: 
        - path: /api/v1
          pathType: Prefix
          backend: 
            service: 
              name: coordinator
              port: 
                number: 8080
        - path: /swagger-ui
          pathType: Prefix
          backend: 
            service: 
              name: coordinator
              port: 
                number: 8080
        - path: /
          pathType: Prefix
          backend: 
            service: 
              name: frontend
              port: 
                number: 80
